--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -396,8 +396,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Xiaoyue_Zhou\n",
-            "8\n",
+            "Wentao Qiu\n",
+            "10\n",
             "True\n"
           ]
         }
@@ -2000,7 +2000,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.10"
     },
     "vscode": {
       "interpreter": {
